<resources>
    <string name="app_name">IntelliSpace</string>
    <string-array name="array_rooms">
        <item>Room-Type</item>
        <item>Audio-Room</item>
        <item>Video-Room</item>
        <item>Web Conferencing Room</item>
        <item>Meeting-Room</item>

    </string-array>

    <string-array name="array_floor">
        <item>Floor-1</item>
        <item>Floor-2</item>
        <item>Floor-3</item>
        <item>Floor-4</item>
        <item>Floor-5</item>
        <item>Floor-6</item>
        <item>Floor-7</item>
    </string-array>
    <string-array name="No_of_Rooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="organize_name">Enter the Organization Name</string>
    <string name="signup">New?? <u>Click here to join us</u></string>

    <string name="question1">Hi</string>
    <string name="question2">Welcome to Intellispace, Which building are you looking for the meeting ?</string>
    <string name="question3">Okay, Which type meeting are you looking for ?</string>
    <string name="question4">Please say me the Meeting Start time (in 24hrs eg:18:00)</string>
    <string name="question5">Tell me your End time (in 24hrs eg:18:00</string>
    <string name="question6">Convey me the Invitees name to Notify them</string>
</resources>
